spacing fix

--- a/src/Item.scss
+++ b/src/Item.scss
@@ -23,6 +23,7 @@
       float: right;
       display: block;
       width: 25px;
+      margin-top: 8px;
       transition: transform 340ms ease-out;
       svg {
         display: block;
